change little mistake

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ padding: 8px 16px;
 font-size: 20px;
 }
 #Second{
-    text-align: center;
+    margin-left: 100px;
     padding: 210px 0px ;
 }
 #Second h2{
